code readability fix

--- a/src/sass/editor.scss
+++ b/src/sass/editor.scss
@@ -186,11 +186,11 @@
     overflow: auto;
     font-family: "Noto Sans KR", sans-serif;
   }
-  .p_line {
+  llct-line {
     text-align: start;
     min-height: 35px;
   }
-  .p_line_lyrics {
+  llct-line-lyrics {
     display: none;
   }
   .line_num {
