--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1324,7 +1324,7 @@ llct-pl-infotext span {
   overflow: auto;
 }
 
-.popup_karaoke .p_line {
+.popup_karaoke llct-line {
   text-align: left;
 }
 
